[gd_scene load_steps=18 format=3 uid="uid://bc3dlfh28twy2"]

[ext_resource type="Texture2D" uid="uid://djg8bs47mw4xw" path="res://Assets/Gemini_Generated_Image_l4jaoml4jaoml4ja.png" id="1_6l7je"]
[ext_resource type="Script" uid="uid://56yqexiqungp" path="res://Scripts/create.gd" id="1_52fb6"]
[ext_resource type="Script" uid="uid://d2hsjpn8jlt46" path="res://Scripts/makeproject.gd" id="3_jv6wh"]
[ext_resource type="Script" uid="uid://bt8v5tt8mwffr" path="res://Scripts/work.gd" id="4_x6ack"]
[ext_resource type="Script" uid="uid://dpj3v8s0jsrjs" path="res://Scripts/employeebutton.gd" id="5_6ev3c"]
[ext_resource type="AudioStream" uid="uid://bo5aj40wwm8e3" path="res://Assets/click.mp3" id="5_iacmt"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jv6wh"]
texture = ExtResource("1_6l7je")
region_rect = Rect2(-481, 0, 2940, 2048)
modulate_color = Color(0.462291, 0.462291, 0.462291, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ev3c"]
bg_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_maf8m"]
bg_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6l7je"]
bg_color = Color(0, 0, 0, 0.831373)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_huasi"]
bg_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m1efj"]
bg_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mai8y"]
bg_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_76v2p"]
bg_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_drdnd"]
bg_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ioaeq"]
bg_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x6ack"]
bg_color = Color(0, 0, 0, 0.623529)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 3

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="background" type="Panel" parent="."]
z_index = -290
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jv6wh")

[node name="create" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -75.0
offset_right = -19.0
offset_bottom = -14.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 31
theme_override_styles/hover = SubResource("StyleBoxFlat_6ev3c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_maf8m")
theme_override_styles/normal = SubResource("StyleBoxFlat_6l7je")
action_mode = 0
text = "Create"
script = ExtResource("1_52fb6")

[node name="makemenu" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -306.0
offset_top = -59.5
offset_right = 306.0
offset_bottom = 59.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="LineEdit" type="LineEdit" parent="makemenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 41
placeholder_text = "Project Name"
alignment = 1
max_length = 50

[node name="Label" type="Label" parent="makemenu"]
layout_mode = 2
text = "Complexity:"

[node name="complexitybutton" type="OptionButton" parent="makemenu"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "Minimal"
popup/item_0/id = 1
popup/item_1/text = "Moderate"
popup/item_1/id = 2
popup/item_2/text = "Maximum"
popup/item_2/id = 3

[node name="Button2" type="Button" parent="makemenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
theme_override_styles/hover = SubResource("StyleBoxFlat_6l7je")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6l7je")
theme_override_styles/normal = SubResource("StyleBoxFlat_6l7je")
action_mode = 0
text = "Create"
script = ExtResource("3_jv6wh")

[node name="projectsmenu" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 27.0
offset_top = 26.0
offset_right = 293.0
offset_bottom = 691.0
theme_override_constants/separation = 15

[node name="projects" type="Label" parent="projectsmenu"]
custom_minimum_size = Vector2(220, 25)
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "No projects yet"
autowrap_mode = 3

[node name="work" type="Button" parent="projectsmenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
theme_override_styles/hover = SubResource("StyleBoxFlat_huasi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m1efj")
theme_override_styles/normal = SubResource("StyleBoxFlat_6l7je")
action_mode = 0
text = "Work"
script = ExtResource("4_x6ack")

[node name="employee" type="Button" parent="projectsmenu"]
layout_mode = 2
tooltip_text = "Hire workers to do work for you."
theme_override_font_sizes/font_size = 23
theme_override_styles/hover = SubResource("StyleBoxFlat_mai8y")
theme_override_styles/pressed = SubResource("StyleBoxFlat_76v2p")
theme_override_styles/normal = SubResource("StyleBoxFlat_6l7je")
action_mode = 0
text = "Hire Workers"
script = ExtResource("5_6ev3c")

[node name="upgrade" type="Button" parent="projectsmenu"]
layout_mode = 2
tooltip_text = "Enables idle gain from previous projects."
theme_override_font_sizes/font_size = 23
theme_override_styles/hover = SubResource("StyleBoxFlat_drdnd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ioaeq")
theme_override_styles/normal = SubResource("StyleBoxFlat_6l7je")
action_mode = 0
text = "Hire Marketing"

[node name="money" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.5
offset_top = 30.0
offset_right = 100.5
offset_bottom = 80.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_x6ack")
text = "$0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_iacmt")
volume_db = -5.0

[connection signal="pressed" from="create" to="create" method="_on_pressed"]
[connection signal="pressed" from="makemenu/Button2" to="makemenu/Button2" method="_on_pressed"]
[connection signal="pressed" from="projectsmenu/work" to="projectsmenu/work" method="_on_pressed"]
[connection signal="mouse_entered" from="projectsmenu/employee" to="projectsmenu/employee" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="projectsmenu/employee" to="projectsmenu/employee" method="_on_mouse_exited"]
[connection signal="pressed" from="projectsmenu/employee" to="projectsmenu/employee" method="_on_pressed"]
[connection signal="mouse_entered" from="projectsmenu/upgrade" to="projectsmenu/employee" method="_on_upgrade_mouse_entered"]
[connection signal="mouse_exited" from="projectsmenu/upgrade" to="projectsmenu/employee" method="_on_upgrade_mouse_exited"]
[connection signal="pressed" from="projectsmenu/upgrade" to="projectsmenu/employee" method="_on_upgrade_pressed"]
